fix(sonarcloud): resolve remaining quality gate warnings and security issues
- Fix path traversal vulnerability (CWE-22) in FileController by normalizing and validating the target path (S2083).
- Remove unused import ProjectResponse in ProjectMapper (S1128).
- Eliminate duplicated literal FINALIZADA and replace Stream.collect(Collectors.toList()) with Stream.toList() in SaveCallAdapter (S1192, S6204).
- Use java.time.Month enum constants in ResearchCallModuleTest and ProjectModuleTest (S2184).
- Inject ZoneId.systemDefault() to LocalDateTime.now() calls in ProcedureEntity, ProjectEntity, RegistrarLineaUseCase, LineaInvestigacion, and AsignarMiembroUseCase (S2171).
- Move execute() implementation to private findCalls() in CallInteractor to avoid direct 'this' invocation of @Transactional method (S6809).
- Replace Stream.collect(Collectors.toList()) with Stream.toList() in CreateProjectInteractor (S6204).
- Merge nested if statements in Project.java validateInvariants (S1066).
- Refactor GrupoInvestigacionController constructor using @RequiredArgsConstructor to respect parameter limit (S107).